--- a/notebooks/testing_code.ipynb
+++ b/notebooks/testing_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12415,7 +12415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12424,7 +12424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12434,7 +12434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12465,21 +12465,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17524</th>\n",
-       "      <td>secret</td>\n",
-       "      <td>security</td>\n",
-       "      <td>2</td>\n",
+       "      <th>87231</th>\n",
+       "      <td>jupyter-notebook</td>\n",
+       "      <td>pymc</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5284</th>\n",
-       "      <td>dashboard</td>\n",
-       "      <td>html</td>\n",
-       "      <td>2</td>\n",
+       "      <th>105180</th>\n",
+       "      <td>automated-market-maker</td>\n",
+       "      <td>core</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51499</th>\n",
-       "      <td>android</td>\n",
-       "      <td>webgl</td>\n",
+       "      <th>131472</th>\n",
+       "      <td>monitor</td>\n",
+       "      <td>performance</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -12487,13 +12487,13 @@
        "</div>"
       ],
       "text/plain": [
-       "          Source    Target  Weight\n",
-       "17524     secret  security       2\n",
-       "5284   dashboard      html       2\n",
-       "51499    android     webgl       1"
+       "                        Source       Target  Weight\n",
+       "87231         jupyter-notebook         pymc       1\n",
+       "105180  automated-market-maker         core       1\n",
+       "131472                 monitor  performance       1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12505,14 +12505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <iframe id=\"315a7f76-011a-450f-8f8b-2daaee585f7a\" src=\"https://hub.graphistry.com/graph/graph.html?dataset=a20b6211b56e420ab5c015c894739a26&type=arrow&viztoken=7b8e8538-950d-4ec4-8b61-e84a138c3fc9&usertag=22f67990-pygraphistry-0.33.7&splashAfter=1713667277&info=true\"\n",
+       "            <iframe id=\"a6b85dc5-7360-48c3-b3f2-574f16af3931\" src=\"https://hub.graphistry.com/graph/graph.html?dataset=1c48c7129a8343a58d4f9c2f1888a011&type=arrow&viztoken=4a8ca52e-eda2-439c-a78b-51f3e9277a9c&usertag=22f67990-pygraphistry-0.33.7&splashAfter=1713804887&info=true\"\n",
        "                    allowfullscreen=\"true\" webkitallowfullscreen=\"true\" mozallowfullscreen=\"true\"\n",
        "                    oallowfullscreen=\"true\" msallowfullscreen=\"true\"\n",
        "                    style=\"width:100%; height:500px; border: 1px solid #DDD; overflow: hidden\"\n",
@@ -12522,7 +12522,7 @@
        "        \n",
        "            <script>\n",
        "                try {\n",
-       "                  $(\"#315a7f76-011a-450f-8f8b-2daaee585f7a\").bind('mousewheel', function(e) { e.preventDefault(); });\n",
+       "                  $(\"#a6b85dc5-7360-48c3-b3f2-574f16af3931\").bind('mousewheel', function(e) { e.preventDefault(); });\n",
        "                } catch (e) { console.error('exn catching scroll', e); }\n",
        "            </script>\n",
        "        "
@@ -12531,7 +12531,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12539,6 +12539,15 @@
    "source": [
     "g = graphistry.bind(source='Source', destination='Target').edges(follows_df)\n",
     "g.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ML machine-learning, topic-modelling"
    ]
   },
   {
