--- a/notebooks/testing_code.ipynb
+++ b/notebooks/testing_code.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12415,7 +12415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12424,7 +12424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12434,7 +12434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -12465,21 +12465,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>87231</th>\n",
-       "      <td>jupyter-notebook</td>\n",
-       "      <td>pymc</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105180</th>\n",
-       "      <td>automated-market-maker</td>\n",
-       "      <td>core</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131472</th>\n",
+       "      <th>46702</th>\n",
        "      <td>monitor</td>\n",
-       "      <td>performance</td>\n",
+       "      <td>status-page</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116924</th>\n",
+       "      <td>android-tv</td>\n",
+       "      <td>jellyfin</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114957</th>\n",
+       "      <td>gui-framework</td>\n",
+       "      <td>react-native-web</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -12487,13 +12487,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Source       Target  Weight\n",
-       "87231         jupyter-notebook         pymc       1\n",
-       "105180  automated-market-maker         core       1\n",
-       "131472                 monitor  performance       1"
+       "               Source            Target  Weight\n",
+       "46702         monitor       status-page       1\n",
+       "116924     android-tv          jellyfin       1\n",
+       "114957  gui-framework  react-native-web       1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12505,14 +12505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <iframe id=\"a6b85dc5-7360-48c3-b3f2-574f16af3931\" src=\"https://hub.graphistry.com/graph/graph.html?dataset=1c48c7129a8343a58d4f9c2f1888a011&type=arrow&viztoken=4a8ca52e-eda2-439c-a78b-51f3e9277a9c&usertag=22f67990-pygraphistry-0.33.7&splashAfter=1713804887&info=true\"\n",
+       "            <iframe id=\"d50e12b9-d3a8-4650-8524-fe3602ec1235\" src=\"https://hub.graphistry.com/graph/graph.html?dataset=7bde2408fee344db8b583bb4ca11cadd&type=arrow&viztoken=c1a6a810-c24e-4a07-8b9f-d620c5390349&usertag=22f67990-pygraphistry-0.33.8&splashAfter=1717053476&info=true\"\n",
        "                    allowfullscreen=\"true\" webkitallowfullscreen=\"true\" mozallowfullscreen=\"true\"\n",
        "                    oallowfullscreen=\"true\" msallowfullscreen=\"true\"\n",
        "                    style=\"width:100%; height:500px; border: 1px solid #DDD; overflow: hidden\"\n",
@@ -12522,7 +12522,7 @@
        "        \n",
        "            <script>\n",
        "                try {\n",
-       "                  $(\"#a6b85dc5-7360-48c3-b3f2-574f16af3931\").bind('mousewheel', function(e) { e.preventDefault(); });\n",
+       "                  $(\"#d50e12b9-d3a8-4650-8524-fe3602ec1235\").bind('mousewheel', function(e) { e.preventDefault(); });\n",
        "                } catch (e) { console.error('exn catching scroll', e); }\n",
        "            </script>\n",
        "        "
@@ -12531,7 +12531,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12548,6 +12548,87 @@
    "outputs": [],
    "source": [
     "ML machine-learning, topic-modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x110cde300>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import dash\n",
+    "import dash_cytoscape as cyto\n",
+    "import dash_html_components as html\n",
+    "import networkx as nx\n",
+    "import community as community_louvain\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "\n",
+    "# 创建网络图\n",
+    "G = nx.karate_club_graph()\n",
+    "\n",
+    "# 使用 Louvain 算法检测社区\n",
+    "partition = community_louvain.best_partition(G)\n",
+    "\n",
+    "# 为每个节点分配颜色\n",
+    "colors = [random.randint(0, 255) for _ in range(len(set(partition.values())))]\n",
+    "color_map = {community: f'rgb({colors[community]}, {255 - colors[community]}, {colors[community] // 2})' for community in set(partition.values())}\n",
+    "\n",
+    "# 转换为 Cytoscape 格式并应用颜色\n",
+    "nodes = [{'data': {'id': str(node), 'label': str(node), 'color': color_map[partition[node]]}} for node in G.nodes]\n",
+    "edges = [{'data': {'source': str(edge[0]), 'target': str(edge[1])}} for edge in G.edges]\n",
+    "\n",
+    "# 创建 Dash 应用\n",
+    "app = dash.Dash(__name__)\n",
+    "app.layout = html.Div([\n",
+    "    cyto.Cytoscape(\n",
+    "        id='network-graph',\n",
+    "        elements=nodes + edges,\n",
+    "        style={'width': '100%', 'height': '600px'},\n",
+    "        layout={'name': 'cose'},\n",
+    "        stylesheet=[\n",
+    "            {\n",
+    "                'selector': 'node',\n",
+    "                'style': {\n",
+    "                    'background-color': 'data(color)',\n",
+    "                    'label': 'data(label)'\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True)\n"
    ]
   },
   {
@@ -12574,7 +12655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
