--- a/notebooks/test_dashboard.ipynb
+++ b/notebooks/test_dashboard.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "\n",
-    "from ipysigma import Sigma\n"
+    "from ipysigma import Sigma"
    ]
   },
   {
@@ -19,135 +18,6 @@
    "source": [
     "follows_df = pd.read_csv('../tmp/network_data.csv')\n",
     "# follows_df.sample(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Source</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>Weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>android</td>\n",
-       "      <td>jetpack-compose</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>android</td>\n",
-       "      <td>music-player</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>android</td>\n",
-       "      <td>youtube</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>android</td>\n",
-       "      <td>music</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>jetpack-compose</td>\n",
-       "      <td>music-player</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145683</th>\n",
-       "      <td>adult</td>\n",
-       "      <td>synology</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145684</th>\n",
-       "      <td>metadata</td>\n",
-       "      <td>synology</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145685</th>\n",
-       "      <td>adult</td>\n",
-       "      <td>japanese</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145686</th>\n",
-       "      <td>japanese</td>\n",
-       "      <td>metadata</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145687</th>\n",
-       "      <td>adult</td>\n",
-       "      <td>metadata</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>145688 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Source           Target  Weight\n",
-       "0               android  jetpack-compose      16\n",
-       "1               android     music-player       4\n",
-       "2               android          youtube       5\n",
-       "3               android            music       4\n",
-       "4       jetpack-compose     music-player       1\n",
-       "...                 ...              ...     ...\n",
-       "145683            adult         synology       1\n",
-       "145684         metadata         synology       1\n",
-       "145685            adult         japanese       1\n",
-       "145686         japanese         metadata       1\n",
-       "145687            adult         metadata       1\n",
-       "\n",
-       "[145688 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "follows_df"
    ]
   },
   {
@@ -276,8 +146,7 @@
     }
    ],
    "source": [
-    "sub_df = follows_df.query(\"Weight > 1\")\n",
-    "sub_df"
+    "sub_df = follows_df.query(\"Weight > 1\")\n"
    ]
   },
   {
@@ -310,7 +179,7 @@
    "source": [
     "Sigma.write_html(\n",
     "    G,\n",
-    "    './dataset4.html',\n",
+    "    './dataset5.html',\n",
     "    fullscreen=True,\n",
     "    node_metrics=['louvain'],\n",
     "    node_color='louvain',\n",
@@ -323,163 +192,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Source</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>Weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>38253</th>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38258</th>\n",
-       "      <td>blockchain</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38265</th>\n",
-       "      <td>oreilly</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38271</th>\n",
-       "      <td>book</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38275</th>\n",
-       "      <td>smart-contracts</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38279</th>\n",
-       "      <td>solidity</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38282</th>\n",
-       "      <td>dapp</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38284</th>\n",
-       "      <td>truffle-framework</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38285</th>\n",
-       "      <td>embark</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46209</th>\n",
-       "      <td>javascript</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46213</th>\n",
-       "      <td>api</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46216</th>\n",
-       "      <td>typescript</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46219</th>\n",
-       "      <td>web3</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46222</th>\n",
-       "      <td>abi-decoders</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46223</th>\n",
-       "      <td>abi-encoders</td>\n",
-       "      <td>web3js</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  Source  Target  Weight\n",
-       "38253           ethereum  web3js       2\n",
-       "38258         blockchain  web3js       1\n",
-       "38265            oreilly  web3js       1\n",
-       "38271               book  web3js       1\n",
-       "38275    smart-contracts  web3js       1\n",
-       "38279           solidity  web3js       1\n",
-       "38282               dapp  web3js       1\n",
-       "38284  truffle-framework  web3js       1\n",
-       "38285             embark  web3js       1\n",
-       "46209         javascript  web3js       1\n",
-       "46213                api  web3js       1\n",
-       "46216         typescript  web3js       1\n",
-       "46219               web3  web3js       1\n",
-       "46222       abi-decoders  web3js       1\n",
-       "46223       abi-encoders  web3js       1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'etl': {'GOOGLE_CREDENTIALS_PATH': '/Users/shikailiu/clean-node-420103-6e83908c3a44.json', 'GITHUB_TOKEN_PATH': '/Users/shikailiu/gh_token.json', 'GITHUB_API_URL': 'https://api.github.com/graphql', 'AWS_CREDENTIAL_PATH': '/Users/shikailiu/.aws/credentials.json'}}\n"
+     ]
     }
    ],
    "source": [
-    "follows_df.query(\"Target=='web3js'\")"
+    "import boto3\n",
+    "import yaml\n",
+    "import requests\n",
+    "import json\n",
+    "with open(\"../repo_analytics/config/config.yaml\", 'r', encoding='utf-8') as file:\n",
+    "    configs = yaml.safe_load(file)\n",
+    "print(configs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AWS_CREDENTIAL_PATH = configs[\"etl\"][\"AWS_CREDENTIAL_PATH\"]\n",
+    "AWS_CREDENTIAL = json.load(open(AWS_CREDENTIAL_PATH, encoding='utf-8'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "AWS_ID = AWS_CREDENTIAL[\"aws_access_key_id\"]\n",
+    "AWS_KEY = AWS_CREDENTIAL[\"aws_secret_access_key\"]\n",
+    "# 配置 S3 客户端，boto3 将自动读取 ~/.aws/credentials 中的凭证"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3 = boto3.client(\n",
+    "    's3',\n",
+    "    aws_access_key_id=AWS_ID,\n",
+    "    aws_secret_access_key=AWS_KEY,\n",
+    "    region_name='us-west-1'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 写入 S3 存储桶\n",
+    "bucket_name = 'static-webpage-sliu'\n",
+    "# 定义要上传的文件和目标存储桶\n",
+    "file_path = './dataset5.html'\n",
+    "file_key = '11223.html'\n",
+    "\n",
+    "# 定义上传额外参数\n",
+    "extra_args = {\n",
+    "    'ContentType': 'text/html'\n",
+    "}\n",
+    "\n",
+    "# 上传文件到 S3\n",
+    "s3.upload_file(file_path, bucket_name, file_key, ExtraArgs=extra_args)\n"
    ]
   },
   {
